Add async profiler to billion checkboxes demo